--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 mingw-w64-libtiff (4.0.8-1) unstable; urgency=medium
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release
 
  -- Tobias Schlemmer <keinstein@users.berlios.de>  Fri, 05 Jan 2018 09:33:46 +0100
